<resources>
    <string name="app_name">Quester</string>
    <string name="btnLogin">LOGIN</string>
    <string name="login_hint">user@email.com</string>
    <string name="senha_hint">Senha</string>
    <string name="nome_da_instituicao">Nome da Instituição</string>
    <string name="telefone">Telefone</string>
    <string name="cidade">Cidade</string>
    <string name="bairro">Bairro</string>
    <string name="logradouro">Logradouro</string>
    <string name="complemento">Complemento</string>
    <string name="numero">Número</string>
    <string name="uf">UF</string>
    <string name="salvar">Salvar</string>
    <string name="todo">TODO</string>
    <string name="err_name">Nome Invalido</string>
    <string name="err_tel">Telefone Invalido</string>
    <string name="err_year">Data Invalida</string>
    <string name="err_uf">Estado Invalido</string>
    <string name="err_cidade">Cidade Invalida</string>
    <string name="err_bairro">Bairro Invalido</string>
    <string name="err_email">E-mail Inválido</string>
    <string name="err_vazio">Campo Obrigatório</string>
    <string name="CPF">CPF</string>
    <string name="nome">Nome</string>
    <string name="email">E-mail</string>
    <string name="data_nascimento">Data Nascimento</string>
    <string name="genero">Gênero</string>
    <string name="perfil">Perfil</string>
    <string name="nivel">Nível</string>
    <string name="descricao">Descrição</string>
    <string name="level_adquire">Nível de Aquisição</string>
    <string name="alunos">Alunos</string>
    <string name="disciplinas">Disciplinas</string>
    <string name="professores">Professores</string>
    <string name="usuarios">Usuários</string>
    <string name="turmas">Turmas</string>
    <string name="recompensas">Recompensas</string>
    <string name="disponiveis">Disponíveis</string>
    <string name="vinculados">Vinculados</string>
    <string name="verificar">Verificar</string>
    <string name="disciplina">Disciplina</string>
    <string name="titulo">Título</string>
    <string name="enunciado">Enunciado</string>
    <string name="alternativa">Alternativa</string>
    <string name="xp">XP</string>
    <string name="adicionar_questao">Adicionar Questão</string>
    <string name="string_adicionar_questao">Adicionar Questão</string>
    <string name="correta">Correta</string>
    <string name="resgatar">Resgatar</string>
    <string name="instList">Instituições</string>
    <string name="roleList">Classes</string>
    <string name="discList">Disciplinas</string>
</resources>