<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.CadastrarQuestionarioActivity">

    <Button
        android:id="@+id/btnSalvarQuestionario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:onClick="adicionarQuestionario"
        android:text="@string/salvar"
        app:layout_constraintEnd_toEndOf="@+id/recyclerViewQuestoes"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/recyclerViewQuestoes"
        app:layout_constraintTop_toBottomOf="@+id/spinnerTipoPontuacao"
        tools:ignore="TextContrastCheck" />

    <Spinner
        android:id="@+id/spinnerDisciplina"
        android:layout_width="353dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/disciplina"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.018"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTitulo"
        android:layout_width="353dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/titulo"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/spinnerDisciplina"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="@+id/spinnerDisciplina"
        app:layout_constraintTop_toBottomOf="@+id/spinnerDisciplina"
        android:importantForAutofill="no" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewQuestoes"
        android:layout_width="396dp"
        android:layout_height="188dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextTitulo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTitulo"
        app:layout_constraintTop_toBottomOf="@+id/editTextTitulo" />

    <EditText
        android:id="@+id/editTextXp"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:hint="@string/xp"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/recyclerViewQuestoes"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/recyclerViewQuestoes"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewQuestoes" />

    <Spinner
        android:id="@+id/spinnerTipoPontuacao"
        android:layout_width="353dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextXp"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnAddQuestao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="btnAddQuestaoClicked"
        android:text="@string/string_adicionar_questao"
        app:layout_constraintEnd_toEndOf="@+id/recyclerViewQuestoes"
        app:layout_constraintStart_toStartOf="@+id/recyclerViewQuestoes"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewQuestoes"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>