<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.CadastrarRecompensaActivity">

    <EditText
        android:id="@+id/editTextDescricaoDisciplina"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="355dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_border"
        android:ems="10"
        android:hint="@string/descricao"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:textColorHint="@color/tortoise"
        android:textStyle="bold"
        android:textSize="14sp"
        app:counterEnabled="true"
        app:counterMaxLength="70"
        app:helperText="Required"
        app:helperTextTextColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextLvlAdquire"
        android:layout_width="355dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/round_border"
        android:ems="10"
        android:hint="@string/level_adquire"
        android:importantForAutofill="no"
        android:inputType="number"
        android:padding="16dp"
        android:textColorHint="@color/tortoise"
        android:textStyle="bold"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextDescricaoDisciplina"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/editTextDescricaoDisciplina"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescricaoDisciplina"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnSalvarRecompensa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@drawable/round_bg"
        android:onClick="buttonSalvarClicked"
        android:text="@string/salvar"
        app:layout_constraintEnd_toEndOf="@+id/editTextLvlAdquire"
        app:layout_constraintStart_toStartOf="@+id/editTextLvlAdquire"
        app:layout_constraintTop_toBottomOf="@+id/editTextLvlAdquire"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>