<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.AlunoInstituicaoDerivadoActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="320dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/tortoise"
        android:onClick="buttonPerfilClicked"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="96dp"
            android:layout_height="84dp"
            android:layout_marginLeft="220dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_account_school_outline"
            tools:layout_conversion_absoluteHeight="24dp"
            tools:layout_conversion_absoluteWidth="24dp"
            tools:layout_editor_absoluteX="45dp"
            tools:layout_editor_absoluteY="32dp"></ImageView>

        <TextView
            android:id="@+id/instDerUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perfil"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            tools:layout_conversion_absoluteHeight="40dp"
            tools:layout_conversion_absoluteWidth="118dp"
            tools:layout_editor_absoluteX="45dp"
            tools:layout_editor_absoluteY="32dp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="320dp"
        android:layout_height="100dp"
        android:layout_marginTop="35dp"
        android:backgroundTint="@color/tortoise"
        android:onClick="buttonTurmaClicked"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintHorizontal_bias="0.0"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <ImageView
            android:layout_width="96dp"
            android:layout_height="84dp"
            android:layout_marginLeft="220dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_account_group"
            tools:layout_conversion_absoluteHeight="24dp"
            tools:layout_conversion_absoluteWidth="24dp"
            tools:layout_editor_absoluteX="45dp"
            tools:layout_editor_absoluteY="32dp"></ImageView>
        <TextView
            android:id="@+id/instDerTurma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/turmas"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="40sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="320dp"
        android:layout_height="100dp"
        android:layout_marginTop="35dp"
        android:backgroundTint="@color/tortoise"
        android:onClick="buttonRecompensaClicked"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/cardView2"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <ImageView
            android:layout_width="96dp"
            android:layout_height="84dp"
            android:layout_marginLeft="220dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_trophy"
            tools:layout_conversion_absoluteHeight="24dp"
            tools:layout_conversion_absoluteWidth="24dp"
            tools:layout_editor_absoluteX="45dp"
            tools:layout_editor_absoluteY="32dp"></ImageView>

        <TextView
            android:id="@+id/instDerRecompensa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="18dp"
            android:text="@string/recompensas"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>