<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.MenuAdminActivity"

    >

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="320dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/tortoise"
        android:onClick="buttonInstuicoesClicked"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="71dp"
            android:layout_marginLeft="220dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/instituicao1"
            tools:layout_conversion_absoluteHeight="24dp"
            tools:layout_conversion_absoluteWidth="24dp"
            tools:layout_editor_absoluteX="45dp"
            tools:layout_editor_absoluteY="32dp"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/instList"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            tools:layout_conversion_absoluteHeight="40dp"
            tools:layout_conversion_absoluteWidth="118dp"
            tools:layout_editor_absoluteX="45dp"
            tools:layout_editor_absoluteY="32dp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="320dp"
        android:layout_height="100dp"
        android:layout_marginTop="170dp"
        android:backgroundTint="@color/tortoise"
        android:onClick="buttonClassesClicked"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="73dp"
            android:layout_marginLeft="220dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/role1"
            tools:layout_conversion_absoluteHeight="24dp"
            tools:layout_conversion_absoluteWidth="24dp"
            tools:layout_editor_absoluteX="45dp"
            tools:layout_editor_absoluteY="32dp"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/roleList"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            tools:layout_conversion_absoluteHeight="40dp"
            tools:layout_conversion_absoluteWidth="118dp"
            tools:layout_editor_absoluteX="45dp"
            tools:layout_editor_absoluteY="32dp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="320dp"
        android:layout_height="100dp"
        android:layout_marginTop="300dp"
        android:backgroundTint="@color/tortoise"
        android:onClick="buttonDisciplinasClicked"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="73dp"
            android:layout_marginLeft="220dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/disciplinas1"
            tools:layout_conversion_absoluteHeight="24dp"
            tools:layout_conversion_absoluteWidth="24dp"
            tools:layout_editor_absoluteX="45dp"
            tools:layout_editor_absoluteY="32dp"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/discList"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            tools:layout_conversion_absoluteHeight="40dp"
            tools:layout_conversion_absoluteWidth="118dp"
            tools:layout_editor_absoluteX="45dp"
            tools:layout_editor_absoluteY="32dp" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
